tests/netgen/errors/unknown_option/options.netgen
--grid --grid.number=10 --grid.length=400 --test_this_funky_but_not_exitsing_option
